fixing flexbox image stretching issue

--- a/static/sass/base/_images.scss
+++ b/static/sass/base/_images.scss
@@ -1,5 +1,6 @@
 picture {
 	display : flex; 
+	align-items: center;
 }
 
 img {
