--- a/static/sass/components/_header.scss
+++ b/static/sass/components/_header.scss
@@ -22,6 +22,7 @@
   
   &__logo-link {
     display : flex;
+    align-items: center;
   }
 
   &.has-backdrop {
